--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "dependencies": {
     "cypress": "^10.11.0",
     "cypress-real-events": "^1.7.1"
+  },
+  "devDependencies": {
+    "cypress-wait-until": "^1.7.2"
   }
 }
