--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "test": "cypress open --browser chrome --e2e"
+    "test": "cypress run --record --key b7254517-6908-42f4-841a-e6af01e517fe",
+    "test:interact": "cypress open --browser chrome --e2e"
   },
   "dependencies": {
-    "cypress": "^10.11.0",
-    "cypress-real-events": "^1.7.1"
+    "cypress": "^13.1.0",
+    "cypress-real-events": "^1.10.1",
+    "cypress-wait-until": "^2.0.1"
   },
-  "devDependencies": {
-    "cypress-wait-until": "^1.7.2"
-  }
+  "devDependencies": {}
 }
