--- a/package.json
+++ b/package.json
@@ -11,5 +11,7 @@
     "cypress-real-events": "^1.10.1",
     "cypress-wait-until": "^2.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prettier": "^3.0.3"
+  }
 }
